--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,3 +1,8 @@
+.logoAndNumbers {
+    position: relative;
+    z-index: 100;
+}
+
 .numbers {
     display: flex;
     justify-content: center;
